Add meta description

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/eye.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Improve your chess skills with Visionoir - a blindfold chess training app. Learn board orientation and sharpen your visualization abilities."
+    />
     <title>Visionoir</title>
   </head>
   <body>
